--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "pubsub-js": "^1.7.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-redux": "^6.0.1",
     "react-router": "^3.2.0",
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
